@@ -12,6 +12,7 @@ import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 import org.geoserver.csw.util.PropertyPath;
 import org.geotools.api.feature.Attribute;
 import org.geotools.api.feature.Feature;
@@ -149,7 +150,7 @@ public class GenericRecordBuilder implements RecordBuilder {
             if (nodes.isEmpty()) {
                 nodes.add(new TreeLeaf());
             }
-            return nodes.stream().map(node -> (TreeLeaf) node).toList();
+            return nodes.stream().map(node -> (TreeLeaf) node).collect(Collectors.toList());
         }
 
         public TreeLeaf getLeaf() {
@@ -160,7 +161,7 @@ public class GenericRecordBuilder implements RecordBuilder {
             if (nodes.isEmpty()) {
                 nodes.add(new TreeBranch());
             }
-            return nodes.stream().map(node -> (TreeBranch) node).toList();
+            return nodes.stream().map(node -> (TreeBranch) node).collect(Collectors.toList());
         }
 
         public TreeBranch getBranch() {
